Add best-seller product ordering by current month sales and enhance invoice row reuse, transaction isolation, and error transparency logic.